# github-actions-playground

./: .firebaserc  README.md  lgtmoon.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot-slack-ignore.json  dependabot-slack-ignore.yml  dependabot.yml  dependabot_slack_ignore.yml
.github/aw/: actions-lock.json
.github/scripts/: dependabot-slack-notification.js  trivy-slack-notification.js
.github/workflows/: _dependabot_slack_notification.yml  _trivy_scan.yml  agentics-maintenance.yml  auto_category_labeling.yml  build_function.yml  check_github_context.yml  copilot-setup-steps.yml  dependabot_slack_notification.yml  dependabot_slack_schedule.yml  deploy_cloud_functions.yml  draw_yugioh_card.yml  generate_requirements.yml  github_project.yml  lgtmoon.yml  pr_labeler.yml  trivy-security-fix.lock.yml  trivy-security-fix.md  trivy_scan.yml
functions/: package-lock.json  package.json  tsconfig.dev.json  tsconfig.json
functions/src/: index.ts
poetry-project/: main.py  pyproject.toml  requirements.txt
