[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["peperoncino"]

[tool.poetry.dependencies]
python = "^3.9"
certifi = ">=2024.8.30"
idna = ">=3.10"
requests = "^2.32.4"
urllib3 = ">=1.26.19,<2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
