[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["peperoncino"]

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.32.4"
certifi = ">=2024.7.4"
urllib3 = ">=2.6.3"
idna = ">=3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
